changelog

### 1.2.1 Solipsist Satisfaction

+ Federation reliability and compat improvements.

+ Fix 32 bit support.

+ Close databases to give the wal file a chance to checkpoint.

+ Dim images in darkmode.

- Remove the hoot: feature. The bird is dead.

### 1.2.0 Forgotten Followup

+ Filter option to match unknown actors.

+ Update some dependencies.

+ Watch local.css for changes.

+ MacOS support. lol.

+ Wait for requests to drain on shutdown.

+ Handle quoteUrl property.

+ Reroute memes to donks in emergencies.

+ Fix handling of svg with bom fucks.

+ FastCGI listening.

+ Finally fix slow public queries.

### 1.1.1 Required Refinement

+ Fix help file stylesheet link.

### 1.1.0 Eventual Enshittification

+ Fix backup command.

+ Fixes for markdown.

+ Allow bigger image uploads.

+ Some hotkeys for the web UI.

+ Upload multiple files (but beware).

+ Better page titles.

+ Refine thread sort.

+ Send updates to correct audience.

+ Run analyze to improve database performance.

+ Delivery performance improvements.

+ Export command to ActivityPub data. (And import.)

+ Note that we require go 1.18 now.

### 1.0.0 Happy Honker

+ A great big honk composition text box.

+ More reliable search.

+ Secret tags.

+ Mentions link locally.

+ ::: spoiler markdown

+ Fix the bonk and zonk crash.

+ New threaded display order.

+ Improved search.

+ Tuned up superdeliverator.

+ Import from instagram.

+ Improve handling of some Page and Link objects.

+ Other federation fixes.

+ Search can now load external posts.

+ Some hypercard opengraph markup for previews.

### 0.9.91 One More Time

+ Swallow a follow bug.

### 0.9.9 Eat the Bugs

+ Some fixes for image descriptions.

+ Fix double htmlization of subject lines.

+ Remove the wonk support. Fun's over, back to work.

+ All inclusive danger zone spoiler alerts.

+ Emu peeker

+ CSP compliance

+ Filter to match anything with summary/warning.

+ Start collecting quties.
